--- a/overview/stakeholders.html
+++ b/overview/stakeholders.html
@@ -2,15 +2,23 @@
 layout: default
 ---
 
-<h1>People, Memberships, and Decisions</h1>
+<h1>Stakeholder und Stakeholder-Rollen</h1>
 
 <p>
-    Here is a list of everyone in the team. As this needs to be a public repo (otherwise Github Pages are
-    not allowed), we won't use real names here. Instead, everyone is identified by a 3-letter acronym (one letter
-    first name, two letters last name). This means that "Stefan Bente" goes as "SBE".
+    Ein <b>Stakeholder</b> ist eine Person oder eine Organisation, die direkten Einfluss auf die Anforderungen
+    des betrachteten Systems hat, und / oder ein Interesse an dem zu entwickelnden System. Stakeholder sind stets
+    <i>konkrete</i> Personen oder Organisationen.
 </p>
 <p>
-    In addition, the table lists team and SIG memberships, and decision(s) the person is responsible for.
+    Sie werden in dieser Webpräsenz ausschließlich öffentlich verfügbaren Angaben dargestellt, oder mit
+    Informationen, in deren Veröffentlichung die Person oder Organisation eingewilligt hat (z.B. im Rahmen
+    einer Expertenbefragung). U.U. sind Namen und Kontaktdetails anonymisiert, aber der Redaktion dieser
+    Seite bekannt.
+</p>
+<p>
+    <b>Stakeholder-Rollen</b> sind verallgemeinerte, "typische" Rollen von Stakeholdern, die dann etwa in
+    Use Cases Verwendung finden können. Ein Beispiel: "Prof. Dr. Erika Musterfrau, Professorin für angewandte
+    Mathematik" wäre ein Stakeholder, während "Professor*in" die Stakeholder-Rolle ist.
 </p>
 
 
