--- a/overview/stakeholderRoles.html
+++ b/overview/stakeholderRoles.html
@@ -22,8 +22,9 @@ layout: default
     <tbody>
     {% for stakeholderRole in site.stakeholderRoles %}
     <tr>
+        {% assign file_name = stakeholderRole.url | relative_url %}
         <td>{{ stakeholderRole.acronym }}</td>
-        <td>{{ stakeholderRole.name }}</td>
+        <td><a href="{{ site.url }}{{ file_name | relative_url }}">{{ stakeholderRole.name }}</a></td>
         <td>{{ stakeholderRole.description }}</td>
     </tr>
     {% endfor %}
