--- a/overview/stakeholders.html
+++ b/overview/stakeholders.html
@@ -29,8 +29,9 @@ layout: default
     <tbody>
         {% for stakeholder in site.stakeholders %}
         <tr>
+            {% assign file_name = stakeholder.url | relative_url %}
             <td>{{ stakeholder.acronym }}</td>
-            <td>{{ stakeholder.name }}</td>
+            <td><a href="{{ site.url }}{{ file_name | relative_url }}">{{ stakeholder.name }}</a></td>
             <td>{% include /functions/link-to-role.html myRoleAcronym=stakeholder.stakeholderRole %}</td>
             <td>{{ stakeholder.relationshipToProject }}</td>
         </tr>
