--- a/overview/interviews.html
+++ b/overview/interviews.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Stakeholder</h1>
+<h1>Interviews</h1>
 
 <p>
     Ein <b>Interview</b> eine Form der Befragung mit dem Ziel, persönliche Informationen, Sachverhalte oder Meinungen zu ermitteln.
