--- a/overview/literatureReferences.html
+++ b/overview/literatureReferences.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Stakeholder</h1>
+<h1>Literatur</h1>
 
 <p>
     Ein <b>Literaturverweis</b> ist ein Verweis auf eine Quelle, die in der Literatur oder im Web zu finden ist.
