--- a/overview/surveys.html
+++ b/overview/surveys.html
@@ -2,10 +2,12 @@
 layout: default
 ---
 
-<h1>Stakeholder</h1>
+<h1>(Online-)Umfragen</h1>
 
 <p>
-    Ein <b>Interview</b> eine Form der Befragung mit dem Ziel, persönliche Informationen, Sachverhalte oder Meinungen zu ermitteln.
+    Durch eine Umfrage lassen sich viele potentielle Nutzer mit geringen Aufwand erreichen. Zusätzlich
+    fühlen sich die Probanden/Befragten nicht einem Druck durch eine reale Person ausgesetzt,
+    so wie es bei einem Interview der Fall ist.
 </p>
 
 
