--- a/overview/workshops.html
+++ b/overview/workshops.html
@@ -2,10 +2,11 @@
 layout: default
 ---
 
-<h1>Stakeholder</h1>
+<h1>Workshops</h1>
 
 <p>
-    Ein <b>Interview</b> eine Form der Befragung mit dem Ziel, persönliche Informationen, Sachverhalte oder Meinungen zu ermitteln.
+    Workshops sind methodisch vorbereitete, auf bestimmte Stakeholder-Rollen fokussierte Veranstaltung zur Informations- und
+    Anforderungsgewinnung.
 </p>
 
 
