--- a/overview/functionalRequirements.html
+++ b/overview/functionalRequirements.html
@@ -20,17 +20,21 @@ layout: default
 <table>
     <thead>
     <tr>
-        <th width="30%">Name</th>
-        <th width="30%">Zahlt ein auf Ziel(e)</th>
-        <th width="15%">Implementierungs-Status</th>
-        <th width="15%">Kano-Typ</th>
-        <th width="10%">Punkte aus Vorpriorisierung</th>
+        <th width="5%"></th>
+        <th width="20%">Name</th>
+        <th width="20%">Zahlt ein auf Ziel(e)</th>
+        <th width="8%">Implementierungs-Status</th>
+        <th width="8%">Kano-Typ</th>
+        <th width="8%">Punkte aus Vorpriorisierung</th>
     </tr>
     </thead>
     <tbody>
         {% assign functionalRequirements = site.functionalRequirements | sort: "prefilterPriorizationPoints" | reverse %}
         {% for functionalRequirement in functionalRequirements %}
         <tr>
+            {% include /functions/checks/check-functionalRequirements.html myArtefact=functionalRequirement %}
+            {% include /functions/print-check-icon.html errors=errorString warnings=warningString todos=functionalRequirement.todo %}
+            <td>{{ iconString }}</td>
             <td><a href="{{ site.url }}{{ functionalRequirement.url | relative_url }}">{{ functionalRequirement.title }}</a></td>
             <td>(tbd.)</td>
             {% include /functions/implementation-status.html my_requirement=functionalRequirement %}
