--- a/overview/functionalRequirements.html
+++ b/overview/functionalRequirements.html
@@ -25,14 +25,14 @@ layout: default
         <th width="25%">Zahlt ein auf Ziel(e)</th>
         <th width="15%">Implementierungs-Status</th>
         <th width="15%">Kano-Typ</th>
-        <th width="10%">Punkte aus Vorpriorisierung</th>
+        <th width="10%" style="text-align:center !important;">Punkte aus Vorpriorisierung</th>
     </tr>
     </thead>
     <tbody>
         {% assign functionalRequirements = site.functionalRequirements | sort: "prefilterPriorizationPoints" | reverse %}
         {% for functionalRequirement in functionalRequirements %}
         <tr>
-            {% include /functions/checks/check-functionalRequirements.html myArtefact=functionalRequirement %}
+            {% include /functions/checks/check-generic-aspects.html myArtefact=functionalRequirement %}
             {% include /functions/get-check-icon.html errors=errorString warnings=warningString todos=functionalRequirement.todo %}
             <td>{{ iconString }}</td>
             <td><a href="{{ site.url }}{{ functionalRequirement.url | relative_url }}">{{ functionalRequirement.title }}</a></td>
