--- a/overview/functionalRequirements.html
+++ b/overview/functionalRequirements.html
@@ -40,11 +40,12 @@ layout: default
                         myErrorString=errorString myWarningString=warningString %}
             {% include /functions/get-check-icon.html errors=errorString warnings=warningString todos=functionalRequirement.todo %}
             <td>{{ iconString }}</td>
+
             <td><a href="{{ site.url }}{{ functionalRequirement.url | relative_url }}">{{ functionalRequirement.title }}</a></td>
             <td>(tbd.)</td>
             {% include /functions/get-implementation-status.html my_requirement=functionalRequirement %}
             <td>{{ implementationStatus }}</td>
-            {% include /functions/kano-type.html my_requirement=functionalRequirement %}
+            {% include /functions/get-kano-type.html my_requirement=functionalRequirement %}
             <td>{{ kanoType }}</td>
             <td>{{ functionalRequirement.prefilterPriorizationPoints }}</td>
         </tr>
