--- a/overview/personas.html
+++ b/overview/personas.html
@@ -21,8 +21,7 @@ layout: default
     <tbody>
     {% for persona in site.personas %}
     <tr>
-        {% assign file_name = persona.url | relative_url %}
-        <td><a href="{{ site.url }}{{ file_name | relative_url }}">{{ persona.name }}</a></td>
+        <td><a href="{{ site.url }}{{ persona.url | relative_url }}">{{ persona.name }}</a></td>
         <td>{% include /functions/print-link-to-role.html myRoleAcronym=persona.stakeholderRole %}</td>
     </tr>
     {% endfor %}
