--- a/overview/workshops.html
+++ b/overview/workshops.html
@@ -22,9 +22,8 @@ layout: default
     <tbody>
         {% for workshop in site.workshops %}
         <tr>
-            {% assign file_name = workshop.url | relative_url %}
             <td>{{ workshop.acronym }}</td>
-            <td><a href="{{ site.url }}{{ file_name | relative_url }}">{{ workshop.goals }}</a></td>
+            <td><a href="{{ site.url }}{{ workshop.url | relative_url }}">{{ workshop.goals }}</a></td>
             <td>{{ workshop.date | date: '%B %d, %Y'}}</td>
         </tr>
         {% endfor %}
