--- a/overview/interviews.html
+++ b/overview/interviews.html
@@ -21,9 +21,8 @@ layout: default
     <tbody>
         {% for interview in site.interviews %}
         <tr>
-            {% assign file_name = interview.url | relative_url %}
             <td>{{ interview.acronym }}</td>
-            <td><a href="{{ site.url }}{{ file_name | relative_url }}">Interview mit {{ interview.stakeholder }}</a></td>
+            <td><a href="{{ site.url }}{{ interview.url | relative_url }}">Interview mit {{ interview.stakeholder }}</a></td>
             <td>{% include /functions/print-link-to-stakeholder.html myStakeholderAcronym=interview.stakeholder %}</td>
             <td>{{ interview.date | date: '%B %d, %Y'}}</td>
         </tr>
