--- a/overview/priorization.html
+++ b/overview/priorization.html
@@ -39,7 +39,12 @@ layout: default
     <tr>
         <th>Functional Requirement</th>
         {% for goalRef in goalRefList %}
-            <th>{{ goalRef }}</th>
+            {% assign foundGoals = site.goals | where:"acronym", goalRef %}
+            {% if foundGoals.size == 1 %}
+                {% assign goal = foundGoals[0] %}
+                {% include /functions/get-globalid.html myCollection=site.goals myArtefact=goal myPrefix="G" %}
+                <th><a href="{{ site.url }}{{ goal.url | relative_url }}">{{ globalId }}</a></th>
+            {% endif %}
         {% endfor %}
     </tr>
     </thead>
