--- a/overview/stakeholders.html
+++ b/overview/stakeholders.html
@@ -34,7 +34,7 @@ layout: default
                         myErrorString="" myWarningString="" %}
             {% assign stakeholderRoleRef = stakeholder.stakeholderRole %}
             {% include /functions/checks/check-stakeholderRole-refs.html myStakeholderRoleRef=stakeholderRoleRef
-                        myAsList=false myPurpose="Stakeholder-Rolle"
+                        myAsList=true myPurpose="Stakeholder-Rolle"
                         myErrorString=errorString myWarningString=warningString %}
             {% include /functions/checks/check-stakeholder.html myArtefact=stakeholder
                         myErrorString=errorString myWarningString=warningString %}
@@ -44,7 +44,15 @@ layout: default
                     myArtefact=stakeholder myPrefix="SH" %}
             <td><a href="{{ site.url }}{{ stakeholder.url | relative_url }}">{{ globalId }}</a></td>
             <td><a href="{{ site.url }}{{ stakeholder.url | relative_url }}">{{ stakeholder.name }}</a></td>
-            <td>{% include /functions/print-link-to-role.html myRoleAcronym=stakeholder.stakeholderRole %}</td>
+            <td>
+                {% assign linkList = "" | split: ";" %}
+                {% for shr in stakeholder.stakeholderRole %}
+                    {% include /functions/get-link-to-stakeholder-role.html myRoleAcronym=shr withId=false %}
+                    {% assign linkList = linkList | push: stakeholderRoleLink %}
+                {% endfor %}
+                {% assign linkString = linkList | join: ",<br/>" %}
+                {{ linkString }}
+            </td>
             <td>{{ stakeholder.relationshipToProject }}</td>
         </tr>
         {% endfor %}
