--- a/overview/interviews.html
+++ b/overview/interviews.html
@@ -12,19 +12,21 @@ layout: default
 <table>
     <thead>
     <tr>
-        <th width="10%">Akronym</th>
-        <th width="45%">Name</th>
-        <th width="30%">Stakeholder</th>
+        <th width="5%"></th>
+        <th width="10%">ID</th>
+        <th width="30%">Interviewpartner (Stakeholder)</th>
         <th width="15%">Datum</th>
     </tr>
     </thead>
     <tbody>
         {% for interview in site.interviews %}
         <tr>
-            <td>{{ interview.acronym }}</td>
-            <td><a href="{{ site.url }}{{ interview.url | relative_url }}">Interview mit {{ interview.stakeholder }}</a></td>
+            <td>&nbsp;</td>
+            {% include /functions/get-globalid.html myCollection=site.interviews
+                    myArtefact=interview myPrefix="I" %}
+            <td><a href="{{ site.url }}{{ interview.url | relative_url }}">{{ globalId }}</a></td>
             <td>{% include /functions/print-link-to-stakeholder.html myStakeholderAcronym=interview.stakeholder %}</td>
-            <td>{{ interview.date | date: '%B %d, %Y'}}</td>
+            <td><a href="{{ site.url }}{{ interview.url | relative_url }}">{{ interview.date | date: '%d.%m.%Y'}}</a></td>
         </tr>
         {% endfor %}
     </tbody>
