--- a/overview/stakeholderRoles.html
+++ b/overview/stakeholderRoles.html
@@ -21,9 +21,14 @@ layout: default
     </tr>
     </thead>
     <tbody>
-    {% for stakeholderRole in site.stakeholderRoles %}
+    {% assign sortField = site.data.metadata["stakeholderRole"].sortField %}
+    {% assign collection = site.stakeholderRoles | sort: sortField %}
+    {% for stakeholderRole in collection %}
     <tr>
-
+        <td>&nbsp;</td>
+        {% include /functions/get-globalid.html myCollection=site.stakeholderRoles
+                myArtefact=stakeholderRole myPrefix="SHR" %}
+        <td><a href="{{ site.url }}{{ stakeholder.url | relative_url }}">{{ globalId }}</a></td>
         <td><a href="{{ site.url }}{{ stakeholderRole.url | relative_url }}">{{ stakeholderRole.name }}</a></td>
         <td>{{ stakeholderRole.description }}</td>
     </tr>
