--- a/overview/systemContextElements.html
+++ b/overview/systemContextElements.html
@@ -19,7 +19,9 @@ layout: default
     </tr>
     </thead>
     <tbody>
-    {% for context in site.systemContextElements %}
+    {% assign sortField = site.data.metadata["systemContextElement"].sortField %}
+    {% assign collection = site.systemContextElements | sort: sortField %}
+    {% for systemContextElement in collection %}
     <tr>
         <td><a href="{{ site.url }}{{ context.url | relative_url }}">{{ context.acronym }}</td>
         <td>{{ context.type }}</a></td>
