--- a/overview/stakeholderRoles.html
+++ b/overview/stakeholderRoles.html
@@ -25,10 +25,16 @@ layout: default
     {% assign collection = site.stakeholderRoles | sort: sortField %}
     {% for stakeholderRole in collection %}
     <tr>
-        <td>&nbsp;</td>
+        {% include /functions/checks/check-generic-aspects.html myArtefact=stakeholderRole
+                    myErrorString="" myWarningString="" %}
+        {% include /functions/checks/check-stakeholderRole.html myArtefact=stakeholderRole
+                    myErrorString=errorString myWarningString=warningString %}
+        {% include /functions/get-check-icon.html errors=errorString warnings=warningString todos=stakeholder.todo %}
+        <td>{{ iconString }}</td>
+
         {% include /functions/get-globalid.html myCollection=site.stakeholderRoles
                 myArtefact=stakeholderRole myPrefix="SHR" %}
-        <td><a href="{{ site.url }}{{ stakeholder.url | relative_url }}">{{ globalId }}</a></td>
+        <td><a href="{{ site.url }}{{ stakeholderRole.url | relative_url }}">{{ globalId }}</a></td>
         <td><a href="{{ site.url }}{{ stakeholderRole.url | relative_url }}">{{ stakeholderRole.name }}</a></td>
         <td>{{ stakeholderRole.description }}</td>
     </tr>
