--- a/overview/stakeholderRoles.html
+++ b/overview/stakeholderRoles.html
@@ -33,7 +33,7 @@ layout: default
         <td>{{ iconString }}</td>
 
         {% include /functions/get-globalid.html myCollection=site.stakeholderRoles
-                myArtefact=stakeholderRole myType="stakeholderRoles" %}
+                myArtefact=stakeholderRole myType="stakeholderRole" %}
         <td><a href="{{ site.url }}{{ stakeholderRole.url | relative_url }}">{{ globalId }}</a></td>
         <td><a href="{{ site.url }}{{ stakeholderRole.url | relative_url }}">{{ stakeholderRole.name }}</a></td>
         <td>{{ stakeholderRole.description }}</td>
