added sentence numbering to scenarios, and enabled scenario display

--- a/overview/reviews.html
+++ b/overview/reviews.html
@@ -26,7 +26,8 @@ layout: default
         <tr>
             {% include /functions/checks/check-generic-aspects.html myArtefact=review
                         myErrorString="" myWarningString="" %}
-            {% include /functions/get-check-icon.html errors=errorString warnings=warningString todos=stakeholder.todo %}
+            {% include /functions/get-check-icon.html errors=errorString warnings=warningString
+                    todos=review.todo %}
             <td>{{ iconString }}</td>
 
             {% include /functions/get-globalid.html myCollection=site.stakeholders
